--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,9 +7,9 @@ android {
 
     defaultConfig {
         applicationId "be.henallux.smartclass"
-        minSdkVersion 16
+        minSdkVersion 25
         targetSdkVersion 30
-        multiDexEnabled true
+        //multiDexEnabled true
         versionCode 1
         versionName "1.0"
 
@@ -53,6 +53,13 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    implementation 'com.auth0.android:jwtdecode:1.1.1'
+
+    def room_version = "2.2.5"
+    //noinspection GradleDependency
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
 }
 repositories {
